# tiebrush

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.rst  build.sh  config_htslib.sh  run_tests.sh  sashimi.py
example/t1/: t1.sample.bedgraph
example/t2/: t2.sample.bedgraph
example_sashimi/: example.cov.bedgraph  example.gtf  example.junctions.bed
src/: GSam.h  Makefile  brush.rs  commons.h  commons.rs  cov.rs  main.rs  samreader.rs  test.rs  tiebrush.cpp  tiecov.cpp  tiecov_more.cpp  tmerge.cpp  tmerge.h
